added Collections.toMap() that allows null values